# stack

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  TODO.md
compile_c_includes/: coerce.c  errors.c  globals.c  header.c  if.c  lookup.c  loop.c  main.c  main_start.c  names.c  stack_dump.c  template.c  types.c
compile_c_includes/builtins/: and.c  cond.c  if.c  int.c  loop.c  mod.c  nand.c  not.c  or.c  read.c  stack-generate.c  stack-new.c  stack-pop.c  stack-push.c  stack-ref.c  stack-set.c  stack-size.c  to_float.c  to_int.c  when.c  write.c  xor.c
examples/: add2.stack  arity-in-2.stack  basic.stack  boolean-ops.stack  collatz.stack  complex-test.stack  double-named.stack  dup.stack  echo.stack  euler-14-cond.stack  euler-14-list.stack  euler-14-loop-list.stack  euler-14.stack  euler-15.stack  euler-16.stack  even-odd.stack  fact1.stack  fact2.stack  factorial-explicity-recursive.stack  factorial-loop-apply.stack  factorial-loop.stack  factorial-recursive.stack  factorial.stack  fibonacci-acc.stack  fibonacci-loop-keep2.stack  fibonacci-loop.stack  fibonacci-naive-block.stack  fizz-buzz.stack  generate-stack.stack  hash.stack  if.stack  list.stack  lists-of-lists.stack  loop-list.stack  loop.stack  mandelbrot-read.stack  mandelbrot-struct.stack  mandelbrot.stack  name-two.stack  numerics.stack  (+2 more)
examples/euler/: euler-1.stack  euler-14-assoc.stack  euler-14-cond.stack  euler-14-list.stack  euler-14.stack  (+5 more)
src/: arity.rs  ccode.rs  compile_c.rs  debug.rs  example_tests.rs  globals.rs  lexer.rs  main.rs  numbers.rs  parser.rs  stack.rs  types.rs  vm.rs
