[package]
name = "stacklang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.17"
paste = "1.0.14"
pretty_env_logger = "0.4.0"
regex = "1.7.2"
sha2 = "0.10.6"
substring = "1.4.5"
